--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/p_fab_initate_layout/p_fab_initate_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/p_fab_initate_layout/p_fab_initate_layout.component.html
@@ -25,6 +25,11 @@
 			<f_npss_manual_verification_ui [comp_id]="'verification_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('verification_ui','f_npss_manual_verification_ui')" profile_name="p_fab_initate_layout"></f_npss_manual_verification_ui >
 		</div>
 	</div>
+	<div id="R11C2R0C4R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="get_deal_ui" >
+			<f_npss_mi_get_deal_ui [comp_id]="'get_deal_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('get_deal_ui','f_npss_mi_get_deal_ui')" profile_name="p_fab_initate_layout"></f_npss_mi_get_deal_ui >
+		</div>
+	</div>
 </div>
 	</div>
 	<div id="R11C2R0C5" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
