--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_cbuae_exception/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_cbuae_exception/f_navigation_ui/f_navigation_ui.component.html
@@ -6,6 +6,9 @@
 		<btn [ctrl_id]="'navigation_ui_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_process_log.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_message_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_message_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_message_log.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_retry'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_retry" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_retry.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_hold'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_hold" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_hold.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_release'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_release" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_release.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_call_reversal'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_call_reversal" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_call_reversal.show"></btn>
  	</div>
 
 </div>
