--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_cbuae_exception/s_cbuae_exception.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_cbuae_exception/s_cbuae_exception.component.html
@@ -12,6 +12,6 @@
 	<p_search_layout [screen_instance]="this" ></p_search_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
-	<datatable [comp_id]="'process_log_list'" [screen_instance]="this"></datatable>
+	<datatable [comp_id]="'process_log_list_dup'" [screen_instance]="this"></datatable>
 </div>
 </div>
