--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/f_view_api_failure__action_ui/f_view_api_failure__action_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/f_view_api_failure__action_ui/f_view_api_failure__action_ui.component.html
@@ -5,6 +5,7 @@
 		<btn [ctrl_id]="'view_api_failure__action_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.view_api_failure__action_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.view_api_failure__action_ui_search.show"></btn>
 		<btn [ctrl_id]="'view_api_failure__action_ui_view_req_and_res'" [comp_id]="comp_id" [ctrl]="screen_instance.view_api_failure__action_ui_view_req_and_res" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.view_api_failure__action_ui_view_req_and_res.show"></btn>
 		<btn [ctrl_id]="'view_api_failure__action_ui_view_failure'" [comp_id]="comp_id" [ctrl]="screen_instance.view_api_failure__action_ui_view_failure" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.view_api_failure__action_ui_view_failure.show"></btn>
+		<btn [ctrl_id]="'view_api_failure__action_ui_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.view_api_failure__action_ui_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.view_api_failure__action_ui_view_process_log.show"></btn>
  	</div>
 
 </div>
