--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/s_view_all_op_transactions.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/s_view_all_op_transactions.component.html
@@ -1,4 +1,5 @@
 <div class="s_view_all_op_transactions">
+<p_view_process_log_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_process_log_layout')"></p_view_process_log_layout>
 <p_view_api_req_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_api_req_layout')"></p_view_api_req_layout>
 <p_view_api_req_and_res_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_api_req_and_res_layout')"></p_view_api_req_and_res_layout>
 <p_view_api_failure_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_api_failure_layout')"></p_view_api_failure_layout>
