8259 - Changes in arc View Op Transaction screen

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/p_view_api_req_layout/p_view_api_req_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/p_view_api_req_layout/p_view_api_req_layout.component.html
@@ -10,7 +10,7 @@
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="view_api_res_ui" >
-			<f_view_api_res_ui [comp_id]="'view_api_res_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('view_api_res_ui','f_view_api_res_ui')" profile_name="p_view_api_req_layout"></f_view_api_res_ui >
+			<f_npss_respose_data_ui [comp_id]="'view_api_res_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('view_api_res_ui','f_npss_respose_data_ui')" profile_name="p_view_api_req_layout"></f_npss_respose_data_ui >
 		</div>
 	</div>
 </div>
