8264 - ARC Query changes for View all op arc transactions

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/p_view_process_log_search/p_view_process_log_search.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/p_view_process_log_search/p_view_process_log_search.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_search" >
-			<f_process_log_search [comp_id]="'process_log_search'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_search','f_process_log_search')" profile_name="p_view_process_log_search"></f_process_log_search >
+			<f_npss_view_tran_api_process_log_sch [comp_id]="'process_log_search'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_search','f_npss_view_tran_api_process_log_sch')" profile_name="p_view_process_log_search"></f_npss_view_tran_api_process_log_sch >
 		</div>
 	</div>
 </div>
