--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/f_process_log_ui/f_process_log_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_arc_transactions/f_process_log_ui/f_process_log_ui.component.html
@@ -5,6 +5,7 @@
 		<btn [ctrl_id]="'process_log_ui_view_response'" [comp_id]="comp_id" [ctrl]="screen_instance.process_log_ui_view_response" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.process_log_ui_view_response.show"></btn>
 		<btn [ctrl_id]="'process_log_ui_view_request'" [comp_id]="comp_id" [ctrl]="screen_instance.process_log_ui_view_request" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.process_log_ui_view_request.show"></btn>
 		<btn [ctrl_id]="'process_log_ui_view_req_and_res'" [comp_id]="comp_id" [ctrl]="screen_instance.process_log_ui_view_req_and_res" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.process_log_ui_view_req_and_res.show"></btn>
+		<btn [ctrl_id]="'process_log_ui_view_failures'" [comp_id]="comp_id" [ctrl]="screen_instance.process_log_ui_view_failures" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.process_log_ui_view_failures.show"></btn>
  	</div>
 
 </div>
