--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_npss_manual_verification_ui/f_npss_manual_verification_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_npss_manual_verification_ui/f_npss_manual_verification_ui.component.html
@@ -11,11 +11,14 @@
 	</div>
 </div>
 <div id="RN01" class="row">
-	<div  id="RN21CN3" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('charge_amount')" >
+	<div  id="RN21CN3" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('charge_amount')" >
 				<txt [ctrl_id]="'npss_manual_verification_ui_charge_amount'" [comp_id]="comp_id" [ctrl]="ctrl.charge_amount" [model]="screen_instance[this.comp_id].f_npss_manual_verification_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="RN01CN5" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dispute_ref_no')" >
+	<div  id="RN01CN5" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dispute_ref_no')" >
 				<txt [ctrl_id]="'npss_manual_verification_ui_dispute_ref_no'" [comp_id]="comp_id" [ctrl]="ctrl.dispute_ref_no" [model]="screen_instance[this.comp_id].f_npss_manual_verification_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN01CN7" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('force_post_flag')" >
+				<txt [ctrl_id]="'npss_manual_verification_ui_force_post_flag'" [comp_id]="comp_id" [ctrl]="ctrl.force_post_flag" [model]="screen_instance[this.comp_id].f_npss_manual_verification_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
 	</form>
