8761 - Manual verification screen changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_payment_processing_details_ui/f_payment_processing_details_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_payment_processing_details_ui/f_payment_processing_details_ui.component.html
@@ -4,6 +4,9 @@
 		<btn [ctrl_id]="'payment_processing_details_ui_back'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_back.show"></btn>
 		<btn [ctrl_id]="'payment_processing_details_ui_reject'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_reject" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_reject.show"></btn>
 		<btn [ctrl_id]="'payment_processing_details_ui_approve'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_approve" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_approve.show"></btn>
+		<btn [ctrl_id]="'payment_processing_details_ui_get_deal'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_get_deal" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_get_deal.show"></btn>
+		<btn [ctrl_id]="'payment_processing_details_ui_send_to_checker'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_send_to_checker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_send_to_checker.show"></btn>
+		<btn [ctrl_id]="'payment_processing_details_ui_force_post'" [comp_id]="comp_id" [ctrl]="screen_instance.payment_processing_details_ui_force_post" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.payment_processing_details_ui_force_post.show"></btn>
  	</div>
 
 </div>
