--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/f_navigation_ui/f_navigation_ui.component.html
@@ -6,8 +6,9 @@
 		<btn [ctrl_id]="'navigation_ui_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_process_log.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_message_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_message_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_message_log.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_review'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_review" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_review.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_send_to_checker'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_checker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_checker.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_force_post'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_force_post" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_force_post.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_send_to_checkers'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_checkers" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_checkers.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_force_posts'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_force_posts" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_force_posts.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_verify'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_verify" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_verify.show"></btn>
  	</div>
 
 </div>
