--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/s_rct_manual_verification.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/s_rct_manual_verification.component.html
@@ -1,4 +1,5 @@
 <div class="s_rct_manual_verification">
+<p_verify_layout [screen_instance]="this" [hidden]="!(current_profile=='p_verify_layout')"></p_verify_layout>
 <p_fin_initate_layout [screen_instance]="this" [hidden]="!(current_profile=='p_fin_initate_layout')"></p_fin_initate_layout>
 <p_fab_initate_layout [screen_instance]="this" [hidden]="!(current_profile=='p_fab_initate_layout')"></p_fab_initate_layout>
 <p_view_req_and_res [screen_instance]="this" [hidden]="!(current_profile=='p_view_req_and_res')"></p_view_req_and_res>
@@ -14,6 +15,9 @@
 	<p_search_layout [screen_instance]="this" ></p_search_layout></p-dialog>
 
 <p-dialog header="{{'Force Post' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_force_post_flag_layout__e_1679466822081_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
+	<p_force_post_flag_layout [screen_instance]="this" ></p_force_post_flag_layout></p-dialog>
+
+<p-dialog header="{{'Force Post' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_force_post_flag_layout__spap_for_force_to_post_btn_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
 	<p_force_post_flag_layout [screen_instance]="this" ></p_force_post_flag_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
