--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
@@ -22,6 +22,11 @@
 				<txt [ctrl_id]="'npss_notification_log_srch_status_code'" [comp_id]="comp_id" [ctrl]="ctrl.status_code" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
+<div id="RN41" class="row">
+	<div  id="RN41CN5" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('uetr')" >
+				<cdn_ctrl [ctrl_id]="'npss_notification_log_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	</div>
+</div>
 	</form>
 </fieldset >
 	<div class="row dynamic_action_btn">
