--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/s_rct_reversal_non_aed.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/s_rct_reversal_non_aed.component.html
@@ -1,4 +1,5 @@
 <div class="s_rct_reversal_non_aed">
+<p_uab_layout [screen_instance]="this" [hidden]="!(current_profile=='p_uab_layout')"></p_uab_layout>
 <p_fab_reversal_non_aed_n_layout [screen_instance]="this" [hidden]="!(current_profile=='p_fab_reversal_non_aed_n_layout')"></p_fab_reversal_non_aed_n_layout>
 <p_view_req_and_res_profile [screen_instance]="this" [hidden]="!(current_profile=='p_view_req_and_res_profile')"></p_view_req_and_res_profile>
 <p_view_response_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_response_layout')"></p_view_response_layout>
