--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fh_review_layout/p_fh_review_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fh_review_layout/p_fh_review_layout.component.html
@@ -1,12 +1,29 @@
 <div class="p_fh_review_layout">
  <!-- PROFILE HTML - p_fh_review_layout --> 
+<div id="R41" class="row">
+	<div id="R41C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="original_transaction_details"  [hidden]="!screen_instance['original_transaction_details'].show" >
+			<datatable [comp_id]="'original_transaction_details'" [screen_instance]="screen_instance" profile_name="p_fh_review_layout"></datatable>
+		</div>
+	</div>
+	<div id="R41C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="refund_processing_details"  [hidden]="!screen_instance['refund_processing_details'].show" >
+			<datatable [comp_id]="'refund_processing_details'" [screen_instance]="screen_instance" profile_name="p_fh_review_layout"></datatable>
+		</div>
+	</div>
+</div>
 <div id="R11" class="row">
-	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R11C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="reversal_ui" >
 			<f_reversal_aed_ui [comp_id]="'reversal_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('reversal_ui','f_reversal_aed_ui')" profile_name="p_fh_review_layout"></f_reversal_aed_ui >
 		</div>
 	</div>
-	<div id="R11C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R11C3" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="remarks_list"  [hidden]="!screen_instance['remarks_list'].show" >
+			<datatable [comp_id]="'remarks_list'" [screen_instance]="screen_instance" profile_name="p_fh_review_layout"></datatable>
+		</div>
+	</div>
+	<div id="R11C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_control_ui" >
 			<f_npss_reversal_plog_ui [comp_id]="'process_log_control_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_control_ui','f_npss_reversal_plog_ui')" profile_name="p_fh_review_layout"></f_npss_reversal_plog_ui >
 		</div>
