--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_ui/f_npss_op_reversal_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_ui/f_npss_op_reversal_ui.component.html
@@ -12,6 +12,9 @@
 	<div  id="RN01CN2" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory87')" >
 				<cbo [ctrl_id]="'npss_op_reversal_ui_memory87'" [comp_id]="comp_id" [ctrl]="ctrl.memory87" [model]="screen_instance[this.comp_id].f_npss_op_reversal_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
+	<div  id="RN01CN4" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('remarks')" >
+				<txt [ctrl_id]="'npss_op_reversal_ui_remarks'" [comp_id]="comp_id" [ctrl]="ctrl.remarks" [model]="screen_instance[this.comp_id].f_npss_op_reversal_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
 </div>
 	</form>
 </fieldset >
