--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.html
@@ -9,8 +9,8 @@
 </div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-3 col-sm-offset-0 col-xs-offset-0" >
-		<div class="outward_transactions_details"  [hidden]="!screen_instance['outward_transactions_details'].show" >
-			<app-label [comp_id]="'outward_transactions_details'" [screen_instance]="screen_instance" profile_name="p_main_layout"></app-label>
+		<div class="label"  [hidden]="!screen_instance['label'].show" >
+			<app-label [comp_id]="'label'" [screen_instance]="screen_instance" profile_name="p_main_layout"></app-label>
 		</div>
 	</div>
 </div>
