11335 - OP Report Wiring Changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.css
@@ -1,2 +1,4 @@
 /* CSS */
 :host ::ng-deep .navigation .row.dynamic_action_btn .btn { float: right; }
+.label{border-radius: 15px;
+padding-top: 15px;}
