11337 - Excel IDE For OP Tran Detail

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/p_main_layout/p_main_layout.component.html
@@ -7,6 +7,13 @@
 		</div>
 	</div>
 </div>
+<div id="R41" class="row">
+	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="header" >
+			<f_header [comp_id]="'header'" [screen_instance]="screen_instance" [hidden]="isHidden('header','f_header')" profile_name="p_main_layout"></f_header >
+		</div>
+	</div>
+</div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-3 col-sm-offset-0 col-xs-offset-0" >
 		<div class="label"  [hidden]="!screen_instance['label'].show" >
