11357 - home dashboard changes

--- a/frontend/wp_ng9/custom_widget/npss_cs_dashboard_title/npss_cs_dashboard_title.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_dashboard_title/npss_cs_dashboard_title.component.html
@@ -1,3 +1,2 @@
-<!--HTML FILE-->
-<div><h3><span  style="background-color: rgb(76, 68, 152);color: white;">  SUMMARY OF MESSAGES FOR TODAY ({{cdrDate}})</span>
-  </h3></div>
+<div><h3  ><span  style="background-color: rgb(76, 68, 152);color: white;">{{Message}}</span>
+  </h3></div> 
