--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/f_npss_outward_transaction_details_report_srch/f_npss_outward_transaction_details_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_transactions_details/f_npss_outward_transaction_details_report_srch/f_npss_outward_transaction_details_report_srch.component.html
@@ -32,7 +32,7 @@
 				<cdn_ctrl [ctrl_id]="'npss_outward_transaction_details_report_srch_dbtr_acct_name'" [comp_id]="comp_id" [ctrl]="ctrl.dbtr_acct_name" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 	<div  id="RN21CN9" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory145')" >
-				<txt [ctrl_id]="'npss_outward_transaction_details_report_srch_memory145'" [comp_id]="comp_id" [ctrl]="ctrl.memory145" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cbo [ctrl_id]="'npss_outward_transaction_details_report_srch_memory145'" [comp_id]="comp_id" [ctrl]="ctrl.memory145" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 </div>
 <div id="RN41" class="row">
@@ -57,15 +57,17 @@
 				<cdn_ctrl [ctrl_id]="'npss_outward_transaction_details_report_srch_payment_endtoend_id'" [comp_id]="comp_id" [ctrl]="ctrl.payment_endtoend_id" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
-<div id="RN61" class="row">
-	<div  id="RN21CN8" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
+<div id="r5" class="row">
+	<div  id="RN21CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
 				<cdn_ctrl [ctrl_id]="'npss_outward_transaction_details_report_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="RN21CN10" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_refno')" >
+	<div  id="RN21CN10" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_refno')" >
 				<cdn_ctrl [ctrl_id]="'npss_outward_transaction_details_report_srch_channel_refno'" [comp_id]="comp_id" [ctrl]="ctrl.channel_refno" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="RN61CN19" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory144')" >
-				<txt [ctrl_id]="'npss_outward_transaction_details_report_srch_memory144'" [comp_id]="comp_id" [ctrl]="ctrl.memory144" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+</div>
+<div id="RN61" class="row">
+	<div  id="RN61CN20" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory144')" >
+				<cdn_ctrl [ctrl_id]="'npss_outward_transaction_details_report_srch_memory144'" [comp_id]="comp_id" [ctrl]="ctrl.memory144" [model]="screen_instance[this.comp_id].f_npss_outward_transaction_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 	</form>
