11572 - Inward CB NAK Enquiry Report

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_general_enquiry_report/f_npss_outward_general_enquiry_report_srch/f_npss_outward_general_enquiry_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_general_enquiry_report/f_npss_outward_general_enquiry_report_srch/f_npss_outward_general_enquiry_report_srch.component.html
@@ -49,24 +49,26 @@
 	</div>
 </div>
 <div id="RN41" class="row">
-	<div  id="RN41CN13" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_acct_name')" >
+	<div  id="RN41CN13" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_acct_name')" >
 				<cdn_ctrl [ctrl_id]="'npss_outward_general_enquiry_report_srch_cdtr_acct_name'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_acct_name" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="RN41CN14" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
+	<div  id="RN41CN14" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
 				<cdn_cur_ctrl [ctrl_id]="'npss_outward_general_enquiry_report_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
-	<div  id="RN41CN15" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cr_sort_code')" >
+</div>
+<div id="RN71" class="row">
+	<div  id="RN41CN15" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cr_sort_code')" >
 				<cdn_ctrl [ctrl_id]="'npss_outward_general_enquiry_report_srch_cr_sort_code'" [comp_id]="comp_id" [ctrl]="ctrl.cr_sort_code" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	</div>
+	<div  id="RN51CN18" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
+				<cbo [ctrl_id]="'npss_outward_general_enquiry_report_srch_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 </div>
 <div id="RN51" class="row">
-	<div  id="RN51CN18" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
-				<cbo [ctrl_id]="'npss_outward_general_enquiry_report_srch_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
-	</div>
-	<div  id="RN51CN19" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('ext_purpose_code')" >
+	<div  id="RN51CN19" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('ext_purpose_code')" >
 				<cbo [ctrl_id]="'npss_outward_general_enquiry_report_srch_ext_purpose_code'" [comp_id]="comp_id" [ctrl]="ctrl.ext_purpose_code" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
-	<div  id="RN51CN20" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('tran_ref_id')" >
+	<div  id="RN51CN20" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('tran_ref_id')" >
 				<cdn_ctrl [ctrl_id]="'npss_outward_general_enquiry_report_srch_tran_ref_id'" [comp_id]="comp_id" [ctrl]="ctrl.tran_ref_id" [model]="screen_instance[this.comp_id].f_npss_outward_general_enquiry_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
