--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_inward_transactions_details/f_npss_inward_transactions_details_report_srch/f_npss_inward_transactions_details_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_inward_transactions_details/f_npss_inward_transactions_details_report_srch/f_npss_inward_transactions_details_report_srch.component.html
@@ -25,24 +25,26 @@
 	</div>
 </div>
 <div id="RN21" class="row">
-	<div  id="RN21CN7" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
+	<div  id="RN21CN7" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
 				<cdn_cur_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
-	<div  id="RN21CN8" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('ext_purpose_code')" >
+	<div  id="RN21CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('ext_purpose_code')" >
 				<cbo [ctrl_id]="'npss_inward_transactions_details_report_srch_ext_purpose_code'" [comp_id]="comp_id" [ctrl]="ctrl.ext_purpose_code" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
-	<div  id="RN21CN9" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('tran_ref_id')" >
+</div>
+<div id="RN71" class="row">
+	<div  id="RN21CN9" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('tran_ref_id')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_tran_ref_id'" [comp_id]="comp_id" [ctrl]="ctrl.tran_ref_id" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	</div>
+	<div  id="RN31CN10" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dbtr_iban')" >
+				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_dbtr_iban'" [comp_id]="comp_id" [ctrl]="ctrl.dbtr_iban" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 <div id="RN31" class="row">
-	<div  id="RN31CN10" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dbtr_iban')" >
-				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_dbtr_iban'" [comp_id]="comp_id" [ctrl]="ctrl.dbtr_iban" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
-	</div>
-	<div  id="RN31CN12" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dbtr_acct_name')" >
+	<div  id="RN31CN12" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('dbtr_acct_name')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_dbtr_acct_name'" [comp_id]="comp_id" [ctrl]="ctrl.dbtr_acct_name" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="RN31CN11" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_iban')" >
+	<div  id="RN31CN11" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_iban')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_cdtr_iban'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_iban" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
@@ -58,18 +60,18 @@
 	</div>
 </div>
 <div id="RN51" class="row">
-	<div  id="RN51CN16" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory144')" >
+	<div  id="RN51CN16" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory144')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_memory144'" [comp_id]="comp_id" [ctrl]="ctrl.memory144" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="RN41CN15" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('payment_endtoend_id')" >
+	<div  id="RN41CN15" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('payment_endtoend_id')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_payment_endtoend_id'" [comp_id]="comp_id" [ctrl]="ctrl.payment_endtoend_id" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
-	</div>
-	<div  id="RN61CN19" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory67')" >
-				<cbo [ctrl_id]="'npss_inward_transactions_details_report_srch_memory67'" [comp_id]="comp_id" [ctrl]="ctrl.memory67" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 </div>
 <div id="RN61" class="row">
-	<div  id="RN51CN18" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('inward_file_name')" >
+	<div  id="RN61CN19" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory67')" >
+				<cbo [ctrl_id]="'npss_inward_transactions_details_report_srch_memory67'" [comp_id]="comp_id" [ctrl]="ctrl.memory67" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
+	</div>
+	<div  id="RN51CN18" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('inward_file_name')" >
 				<cdn_ctrl [ctrl_id]="'npss_inward_transactions_details_report_srch_inward_file_name'" [comp_id]="comp_id" [ctrl]="ctrl.inward_file_name" [model]="screen_instance[this.comp_id].f_npss_inward_transactions_details_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
