--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_npss_rct_tran_srch/f_npss_rct_tran_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_npss_rct_tran_srch/f_npss_rct_tran_srch.component.html
@@ -42,6 +42,11 @@
 				<cdn_ctrl [ctrl_id]="'npss_rct_tran_srch_processing_system'" [comp_id]="comp_id" [ctrl]="ctrl.processing_system" [model]="screen_instance[this.comp_id].f_npss_rct_tran_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
+<div id="RN51" class="row">
+	<div  id="RN51CN11" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
+				<cdn_cur_ctrl [ctrl_id]="'npss_rct_tran_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_rct_tran_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
+	</div>
+</div>
 	</form>
 </fieldset >
 	<div class="row dynamic_action_btn">
