--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_posting_failures/p_return_layout/p_return_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_posting_failures/p_return_layout/p_return_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="return_ui" >
-			<f_return_ui [comp_id]="'return_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('return_ui','f_return_ui')" profile_name="p_return_layout"></f_return_ui >
+			<f_npss_posting_failures_return_ui [comp_id]="'return_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('return_ui','f_npss_posting_failures_return_ui')" profile_name="p_return_layout"></f_npss_posting_failures_return_ui >
 		</div>
 	</div>
 </div>
