--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_user_activity_report/f_user_activity_report_srch/f_user_activity_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_user_activity_report/f_user_activity_report_srch/f_user_activity_report_srch.component.html
@@ -12,7 +12,7 @@
 </div>
 <div id="RN11" class="row">
 	<div  id="RN11CN3" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory165')" >
-				<txt [ctrl_id]="'user_activity_report_srch_memory165'" [comp_id]="comp_id" [ctrl]="ctrl.memory165" [model]="screen_instance[this.comp_id].f_user_activity_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cdn_date [ctrl_id]="'user_activity_report_srch_memory165'" [comp_id]="comp_id" [ctrl]="ctrl.memory165" [model]="screen_instance[this.comp_id].f_user_activity_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 </div>
 	</form>
