--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_user_maintenance_report/f_user_maintenance_report_srch/f_user_maintenance_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_user_maintenance_report/f_user_maintenance_report_srch/f_user_maintenance_report_srch.component.html
@@ -20,7 +20,7 @@
 </div>
 <div id="RN21" class="row">
 	<div  id="RN21CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory163')" >
-				<txt [ctrl_id]="'user_maintenance_report_srch_memory163'" [comp_id]="comp_id" [ctrl]="ctrl.memory163" [model]="screen_instance[this.comp_id].f_user_maintenance_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cdn_date [ctrl_id]="'user_maintenance_report_srch_memory163'" [comp_id]="comp_id" [ctrl]="ctrl.memory163" [model]="screen_instance[this.comp_id].f_user_maintenance_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 	<div  id="RN21CN9" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory75')" >
 				<cdn_ctrl [ctrl_id]="'user_maintenance_report_srch_memory75'" [comp_id]="comp_id" [ctrl]="ctrl.memory75" [model]="screen_instance[this.comp_id].f_user_maintenance_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
