--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_arc_transactions_details/f_npss_op_arc_transaction_report_srch/f_npss_op_arc_transaction_report_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_outward_arc_transactions_details/f_npss_op_arc_transaction_report_srch/f_npss_op_arc_transaction_report_srch.component.html
@@ -41,8 +41,8 @@
 	</div>
 </div>
 <div id="RN41" class="row">
-	<div  id="RN41CN11" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_acct_no')" >
-				<cdn_ctrl [ctrl_id]="'npss_op_arc_transaction_report_srch_cdtr_acct_no'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_acct_no" [model]="screen_instance[this.comp_id].f_npss_op_arc_transaction_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	<div  id="RN41CN11" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_acct_name')" >
+				<cdn_ctrl [ctrl_id]="'npss_op_arc_transaction_report_srch_cdtr_acct_name'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_acct_name" [model]="screen_instance[this.comp_id].f_npss_op_arc_transaction_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 	<div  id="RN41CN12" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('uetr')" >
 				<cdn_ctrl [ctrl_id]="'npss_op_arc_transaction_report_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_op_arc_transaction_report_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
