--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_debit_advice_report/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_debit_advice_report/p_main_layout/p_main_layout.component.html
@@ -7,6 +7,13 @@
 		</div>
 	</div>
 </div>
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-4 col-sm-offset-0 col-xs-offset-0" >
+		<div class="home_dashboard_title"  [hidden]="!screen_instance['home_dashboard_title'].show" >
+			<npss_cs_dashboard_title [comp_id]="'home_dashboard_title'" [screen_instance]="screen_instance" profile_name="p_main_layout"></npss_cs_dashboard_title>
+		</div>
+	</div>
+</div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="npss_credit_debit_widget"  [hidden]="!screen_instance['npss_credit_debit_widget'].show" >
