--- a/frontend/wp_ng9/custom_widget/npss_cs_credit_debit_report/npss_cs_credit_debit_report.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_credit_debit_report/npss_cs_credit_debit_report.component.html
@@ -1,1 +1,7 @@
-<!--HTML FILE-->
+<div style="width: 700px; height: 500px;" class="scrollable-div">
+<pdf-viewer [src]="pdfSrc"
+[render-text]="true"
+[original-size]="false"
+style="width: 200px; height: 200px"
+></pdf-viewer>
+</div>
