--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_investigation/p_close_layout/p_close_layout.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_investigation/p_close_layout/p_close_layout.component.css
@@ -1,2 +1,2 @@
 /* CSS */
-:host ::ng-deep .close_ui .row.dynamic_action_btn .btn { float: right; }
+:host ::ng-deep .remark_ui .row.dynamic_action_btn .btn { float: right; }
