12553 - IDE Link Close btn

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_camt54_posting_failure/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_camt54_posting_failure/f_navigation_ui/f_navigation_ui.component.html
@@ -7,12 +7,12 @@
 		<btn [ctrl_id]="'navigation_ui_view_message_logss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_message_logss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_message_logss.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_retry'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_retry" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_retry.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_close'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_close" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_close.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_repostss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_repostss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_repostss.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_already_postedss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_already_postedss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_already_postedss.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_force_postss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_force_postss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_force_postss.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_send_to_makerss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_makerss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_makerss.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_repost'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_repost" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_repost.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_already_posted'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_already_posted" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_already_posted.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_force_post'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_force_post" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_force_post.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_send_to_maker'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_maker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_maker.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_trg_btn.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_returnss'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_returnss" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_returnss.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_return'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_return" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_return.show"></btn>
  	</div>
 
 </div>
