--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_navigation_ui/f_navigation_ui.component.html
@@ -2,7 +2,7 @@
 	
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'navigation_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_search.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_view_tran_details'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_tran_details" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_tran_details.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_view_tran'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_tran" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_tran.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_message'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_message" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_message.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_export_as_excel'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_export_as_excel" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_export_as_excel.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_export_as_pdf'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_export_as_pdf" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_export_as_pdf.show"></btn>
