12640 -  New column add view camt053

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_npss_view_camt053_srch/f_npss_view_camt053_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_npss_view_camt053_srch/f_npss_view_camt053_srch.component.html
@@ -30,8 +30,8 @@
 	<div  id="195d95db-264e-46f8-a8cd-f7a73bbb0972_1722330688602" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('txn_id')" >
 				<cdn_ctrl [ctrl_id]="'npss_view_camt053_srch_txn_id'" [comp_id]="comp_id" [ctrl]="ctrl.txn_id" [model]="screen_instance[this.comp_id].f_npss_view_camt053_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
-	<div  id="1722330688602CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('txn_ref_msgid')" >
-				<cdn_ctrl [ctrl_id]="'npss_view_camt053_srch_txn_ref_msgid'" [comp_id]="comp_id" [ctrl]="ctrl.txn_ref_msgid" [model]="screen_instance[this.comp_id].f_npss_view_camt053_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	<div  id="1722330688602CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('acct_id')" >
+				<cdn_ctrl [ctrl_id]="'npss_view_camt053_srch_acct_id'" [comp_id]="comp_id" [ctrl]="ctrl.acct_id" [model]="screen_instance[this.comp_id].f_npss_view_camt053_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 	</form>
