12649 - View camt053 Search column add

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_npss_view_camt053_srch/f_npss_view_camt053_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_camt053/f_npss_view_camt053_srch/f_npss_view_camt053_srch.component.html
@@ -34,6 +34,11 @@
 				<cdn_ctrl [ctrl_id]="'npss_view_camt053_srch_acct_id'" [comp_id]="comp_id" [ctrl]="ctrl.acct_id" [model]="screen_instance[this.comp_id].f_npss_view_camt053_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
+<div id="RN41" class="row">
+	<div  id="RN41CN9" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('hdr_created_date_time')" >
+				<cdn_date [ctrl_id]="'npss_view_camt053_srch_hdr_created_date_time'" [comp_id]="comp_id" [ctrl]="ctrl.hdr_created_date_time" [model]="screen_instance[this.comp_id].f_npss_view_camt053_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
+	</div>
+</div>
 	</form>
 </fieldset >
 	<div class="row dynamic_action_btn">
